--- a/Vidly2.csproj
+++ b/Vidly2.csproj
@@ -217,6 +217,18 @@
     <Compile Include="Migrations\201710231643212_ApplyAnnotationsToCustomerName.Designer.cs">
       <DependentUpon>201710231643212_ApplyAnnotationsToCustomerName.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710231923018_AddNameToMembershipType.cs" />
+    <Compile Include="Migrations\201710231923018_AddNameToMembershipType.Designer.cs">
+      <DependentUpon>201710231923018_AddNameToMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201710231923526_PopulateMembershipName.cs" />
+    <Compile Include="Migrations\201710231923526_PopulateMembershipName.Designer.cs">
+      <DependentUpon>201710231923526_PopulateMembershipName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201710232007419_AddBirthdateToCustomer.cs" />
+    <Compile Include="Migrations\201710232007419_AddBirthdateToCustomer.Designer.cs">
+      <DependentUpon>201710232007419_AddBirthdateToCustomer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -322,6 +334,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201710231643212_ApplyAnnotationsToCustomerName.resx">
       <DependentUpon>201710231643212_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710231923018_AddNameToMembershipType.resx">
+      <DependentUpon>201710231923018_AddNameToMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710231923526_PopulateMembershipName.resx">
+      <DependentUpon>201710231923526_PopulateMembershipName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710232007419_AddBirthdateToCustomer.resx">
+      <DependentUpon>201710232007419_AddBirthdateToCustomer.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
