--- a/Vidly2.csproj
+++ b/Vidly2.csproj
@@ -229,9 +229,18 @@
     <Compile Include="Migrations\201710232007419_AddBirthdateToCustomer.Designer.cs">
       <DependentUpon>201710232007419_AddBirthdateToCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710232112024_AddFieldsToMovieGenre.cs" />
+    <Compile Include="Migrations\201710232112024_AddFieldsToMovieGenre.Designer.cs">
+      <DependentUpon>201710232112024_AddFieldsToMovieGenre.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201710241313063_PopulateGenre.cs" />
+    <Compile Include="Migrations\201710241313063_PopulateGenre.Designer.cs">
+      <DependentUpon>201710241313063_PopulateGenre.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
@@ -302,6 +311,7 @@
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Movies\Index.cshtml" />
     <Content Include="Views\Movies\Random.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -343,6 +353,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201710232007419_AddBirthdateToCustomer.resx">
       <DependentUpon>201710232007419_AddBirthdateToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710232112024_AddFieldsToMovieGenre.resx">
+      <DependentUpon>201710232112024_AddFieldsToMovieGenre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710241313063_PopulateGenre.resx">
+      <DependentUpon>201710241313063_PopulateGenre.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
