--- a/Vidly2.csproj
+++ b/Vidly2.csproj
@@ -237,6 +237,14 @@
     <Compile Include="Migrations\201710241313063_PopulateGenre.Designer.cs">
       <DependentUpon>201710241313063_PopulateGenre.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710282030225_CustomerModelAlterations.cs" />
+    <Compile Include="Migrations\201710282030225_CustomerModelAlterations.Designer.cs">
+      <DependentUpon>201710282030225_CustomerModelAlterations.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201710282347338_MovieModelAlterations.cs" />
+    <Compile Include="Migrations\201710282347338_MovieModelAlterations.Designer.cs">
+      <DependentUpon>201710282347338_MovieModelAlterations.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -364,6 +372,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201710241313063_PopulateGenre.resx">
       <DependentUpon>201710241313063_PopulateGenre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710282030225_CustomerModelAlterations.resx">
+      <DependentUpon>201710282030225_CustomerModelAlterations.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710282347338_MovieModelAlterations.resx">
+      <DependentUpon>201710282347338_MovieModelAlterations.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
